[tool.poetry]
name = "playlist-tool"
version = "0.1.0"
description = ""
authors = ["Erick Martinez"]
readme = "README.md"
packages = [{include = "playlist_tool"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
pandas = "^1.4.4"
spotipy = "^2.20.0"
streamlit = "^1.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
